2010-09-20  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/45728
	* expr.c (expand_expr_real_1): If op0 isn't REG or MEM, try
	gen_lowpart_common first and if that fails, force_reg first
	before calling gen_lowpart.

	PR rtl-optimization/45695
	* combine.c (try_combine): Don't try to swap the two patterns, if the
	chosen order is not possible, just give up.  For HAVE_cc0 targets,
	check if XVECEXP (newpat, 0, 0) doesn't use REGs or MEMs set by insns
	in between i2 and i3.

2010-09-20  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/42775
	* cfgrtl.c (rest_of_pass_free_cfg): Recompute notes if delay slot
	scheduling is enabled.

2010-09-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/45234
	* calls.c (expand_call): Make sure that all variable sized
	adjustments are multiple of preferred stack boundary after
	stack alignment.

2010-09-20  Rafael Carre   <rafael.carre@gmail.com>

	PR target/45726
	* arm.md (arm_movtas_ze): Only enable on machine with MOVT.

2010-09-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45623
	* tree-ssa-structalias.c (get_constraint_for_ptr_offset): Adjust.
	(get_constraint_for_component_ref): If computing a constraint
	for the rhs handle type punning through unions.
	(get_constraint_for_address_of): Adjust.
	(get_constraint_for_1): Likewise.
	(get_constraint_for): Likewise.
	(get_constraint_for_rhs): New function.
	(do_structure_copy): Adjust.
	(make_constraint_to): Likewise.
	(handle_const_call): Likewise.
	(find_func_aliases): Likewise.

2010-09-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45709
	* tree-inline.c (copy_phis_for_bb): Delay commit of edge
	insertions until after all PHI nodes of the block are processed.

2010-09-18  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-04-07  Dodji Seketeli  <dodji@redhat.com>

	PR debug/43628